# NONIK0

./: README.md
firmware/: Cargo.toml  README.md
firmware/cpp/: main.cpp  platformio.ini
firmware/rust/: Cargo.toml  README.md  rust-toolchain.toml
firmware/rust/.cargo/: config.toml
firmware/rust/avr-specs/: avr-attiny1604.json
firmware/rust/src/: adc.rs  animation.rs  buttons.rs  eeprom.rs  format.rs  game.rs  hcms29xx.rs  i2c.rs  input.rs  main.rs  main_atxmega.rs  main_old.rs  menu.rs  music.rs  nametag.rs  panic.rs  random.rs  saved_settings.rs  tone.rs  utils.rs  vibes.rs
firmware/rust/src/hcms29xx/: constants.rs  font5x7.rs
firmware/rust/src/mcu/: attiny1604.rs  feather32u4.rs  mod.rs
firmware/rust/src/modes/: game.rs  i2c_utils.rs  menu.rs  mod.rs  nametag.rs  random.rs  sensors.rs  settings.rs  traffic.rs  tunnel.rs  utils.rs  vibes.rs
firmware/rust/src/modes/sensors/: adc.rs  mod.rs  settings.rs
firmware/src/: hcms29xx.rs
firmware/src/hcms29xx/: font5x7.rs
hardware/: DotMatrixBadge.kicad_sym  HCMS-291X.bak  _autosave-dot-matrix-badge.kicad_pcb  dot-matrix-badge.kicad_pcb  dot-matrix-badge.kicad_prl  dot-matrix-badge.kicad_pro  dot-matrix-badge.kicad_sch  fp-lib-table  sym-lib-table
hardware/DotMatrixBadge.pretty/: JST_SH_4P_No Silkscreen.kicad_mod  LED_0603_1608Metric.kicad_mod  MountingHole_Custom.kicad_mod  Pads_1x5_1mm.kicad_mod  Pads_1x5_2.54mm.kicad_mod  SW_SPDT_PCM12.kicad_mod  SW_SPST_PTS526_JLeads.kicad_mod  SW_SPST_PTS526_JLeadsWGndPin.kicad_mod  SpareBatteryHolder_Keystone_3034_1x20mm.kicad_mod  UPDI_Pads.kicad_mod
hardware/HCMS-291x.pretty/: HCMS-291X.kicad_mod
hardware/kicad8.0/: .gitignore  NONIK0.kicad_pcb  NONIK0.kicad_pro  NONIK0.kicad_sch  NONIK0.kicad_sym  fp-lib-table  sym-lib-table
hardware/kicad8.0/NONIK0.pretty/: BatteryHolder_Keystone_3034_1x20mm.kicad_mod  CMT-322-65-SMT-TR.kicad_mod  C_0603_1608Metric.kicad_mod  D_SOD-523_NoSilkscreen.kicad_mod  HCMS-291X.kicad_mod  MountingHole_Custom.kicad_mod  OSHW_COPPER_10MM.kicad_mod  Pads_1x3_2.54mm.kicad_mod  Pads_1x5_1mm.kicad_mod  R_0603_1608Metric.kicad_mod  SOIC-14_3.9x8.7mm_P1.27mm.kicad_mod  SOT-23-6.kicad_mod  SOT-23-6_SmallerFootprint.kicad_mod  SOT-23-SmallerCourtyard.kicad_mod  SolderJumper-2_P1.3mm_Bridged_RoundedPad1.0x1.5mm.kicad_mod  SolderJumper-3_P1.3mm_Bridged12_RoundedPad1.0x1.5mm.kicad_mod  SolderJumper_SmallerFootprint.kicad_mod  SpareBatteryHolder_Keystone_3034_1x20mm.kicad_mod  UPDI_Pads.kicad_mod
