[package]
name = "NONIK0"
version = "0.1.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "NONIK0"
test = false
bench = false

[dependencies]
avr-device = { version = "0.7.0", features = ["rt"] }
embedded-hal = "1.0"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
random-trait = "0.1.1"
ufmt = "0.2.0"

[dependencies.hcms-29xx]
git = "https://github.com/nonik0/hcms-29xx"
branch = "main"

[dependencies.arduino-hal]
git = "https://github.com/nonik0/avr-hal"
branch = "feather-basic"
features = ["feather-32u4"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
