[package]
name = "NONIK0"
version = "0.1.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "NONIK0"
test = false
bench = false

[features]
default = ["attiny1604"]
#feather32u4 = ["arduino-hal/feather-32u4"]
attiny1604 = ["avrxmega-hal/attiny1604", "avr-device/attiny404", "avr-device/rt"]

[dependencies]
avr-device = { path = "G:\\rust\\avr\\avr-device", features = ["rt"] } # built locally with attiny1604 support
embedded-hal = "1.0"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
random-trait = "0.1.1"
#static_cell = "2.1.0"
ufmt = "0.2.0"

# getting difficult multiple different branches of avr-hal, easy way for now
#[dependencies.arduino-hal]
#path = "G:\\rust\\avr\\avr-hal\\arduino-hal\\"
#git = "https://github.com/nonik0/avr-hal"
#branch = "feather-basic"
#features = ["feather-32u4"]
#optional = true

[dependencies.avrxmega-hal]
path = "G:\\rust\\avr\\avr-hal\\mcu\\avrxmega-hal"
#git = "https://github.com/nonik0/avr-hal"
#branch = "attiny204-804-1604"
features = ["attiny1604"]
optional = true

[dependencies.hcms-29xx]
git = "https://github.com/nonik0/hcms-29xx"
branch = "main"

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
