[package]
name = "NONIK0"
version = "0.1.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "NONIK0"
test = false
bench = false

[features]
default = []
music = [] # TODO
no_i2cutils = []
no_nametag = []
no_random = []
no_sensors = []
no_settings = []
no_traffic = []
no_tunnel = []
no_vibes = []
debug_panic = []
board_v0 = ["no_i2cutils"]

[dependencies]
embedded-hal = "1.0"
enum_dispatch = "0.3.13"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
random-trait = "0.1.1"
static_cell = { version = "2.1.0", features = ["nightly"] }
ufmt = "0.2.0"

[dependencies.avr-device]
git = "https://github.com/Rahix/avr-device"
branch = "main" # revert when attiny1604 is released
features = ["attiny1604", "rt"]

[dependencies.avrxmega-hal]
git = "https://github.com/nonik0/avr-hal"
branch = "avr-device-new"
features = ["attiny1604"]

[dependencies.hcms-29xx]
git = "https://github.com/nonik0/hcms-29xx"
branch = "main"

# Cargo profile settings quick reference:
# codegen-units = [1-N] // Higher = faster compile, lower = better optimizations
# debug = [0-2] // Debug info (0 = none, 1 = minimal, 2 = full)
# incremental = [true, false] // true = faster rebuilds, false = best final optimizations
# lto = [false, "thin", true] // Link-Time Optimization (false = none, "thin" = balanced, true = full)
# opt-level = [0-3, "s", "z"] // Optimization level (0 = fast compile, 3 = max perf, "z" = smallest size)
# panic = ["unwind", "abort"] // "abort" reduces binary size

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
codegen-units = 1
debug = 1
incremental = true
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = true
opt-level = "z"
panic = "abort"
